syntax = "proto3";

import "node_models.proto";

package io.iohk.prism.protos;

// These models are intended for internal usage inside
// the AtalaNode (not to be publicly accessible from the gRPC API)

message AtalaBlock {
  string version = 1;
  repeated SignedAtalaOperation operations = 2;
}

message AtalaObject {
  int32 blockOperationCount = 2;
  int32 blockByteLength = 3;
  oneof block {
    bytes blockHash = 1;
    AtalaBlock blockContent = 4;
  }
}
